src/main/java/com/example/fresher_manager/exception/error/ValidationException.java
package com.example.fresher_manager.exception.error;

public class ValidationException extends RuntimeException{
    public ValidationException(String message) {
        super(message);
    }
}
